# cpp-game-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Neon/: CMakeLists.txt
Neon/src/: Core.h  Neon.h  Test.cpp  Test.h  neon_pch.h  neon_windows_pch.h
Neon/src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Neon/src/Neon/: Application.cpp  Application.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Neon/src/Neon/Component/: OrthographicCameraController.h
Neon/src/Neon/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  MouseButtonCodes.h  PlatformDefinition.h  TimeStep.h  Window.h
Neon/src/Neon/Event/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
Neon/src/Neon/Graphic/: Buffer.h  GraphicContext.h  Shader.cpp  Shader.h  VertexArray.h
Neon/src/Neon/Input/: Input.h  KeyCodes.h
Neon/src/Neon/Layer/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Neon/src/Neon/Renderer/: Buffer.cpp  Buffer.h  GraphicContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Neon/src/Platform/OpenGL/: ImGuiGLRenderer.cpp  ImGuiGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Neon/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl  VertexColor.glsl
Sandbox/src/: Sandbox2DLayer.cpp  Sandbox2DLayer.h  Sandbox3DLayer.cpp  Sandbox3DLayer.h  SandboxApp.cpp  SandboxApp.h  SandboxLayer.cpp  SandboxLayer.h  main.cpp
